packages/pkgcraft/pkgcraft-0.0.11.tar.gz/pkgcraft-0.0.11/testdata/repos/valid/bad/eapi/unsupported/unsupported-0.ebuild
DESCRIPTION="ebuild with unsupported EAPI"
SLOT=0
